# ImgOpts

./: .gitignore  CMakeLists.txt
include/: image_processor.h  md5.h
src/: CMakeLists.txt  image_processor.cpp  main.cpp  md5.cpp
